# pylixir

./: .gitignore  README.md  benchmark.md  cli.py  pyproject.toml
deep/: ppo.py  train.py
deep/conf/: dqn_best.yaml  dqn_normal.yaml  dqn_transformer.yaml  ppo_transformer.yaml
deep/ml/: base.py
deep/model/: baseline.py  feature.py  observation.py
deep/stable_baselines/: _train.py  configure.py  ddqn.py  dqn.py  dqn_transformer.py  evaluate.py  ppo_transformer.py  train.py  util.py
deep/stable_baselines/policy/: council_feature.py  ddqn.py  network.py  ppo_transformer_network.py  transformer_network.py
pylixir/: __init__.py  game.py
pylixir/application/: council.py  enchant.py  game.py  query.py  reducer.py  service.py  state.py  view.py
pylixir/application/terminal/: board.py  color.py  councils.py  progress.py  view.py
pylixir/core/: base.py  committee.py  council.py  progress.py  randomness.py  state.py
pylixir/council/: base.py  logic.py  target.py
pylixir/data/: council_pool.py  loader.py  pool.py  repository.py
pylixir/data/council/: common.py  logic.py  operation.py  target.py
pylixir/data/resource/: council.json
pylixir/envs/: DictPylixirEnv.py  PylixirEnv.py  __init__.py  feature.py  observation.py
pylixir/interface/: cli.py  configuration.py  game.py  view.py
pylixir/ml/: base.py
scripts/: random_benchmark.py
tests/: conftest.py  randomness.py  test_game.py  test_view.py
tests/application/: test_reroll.py
tests/core/: conftest.py  test_enchanter.py  test_enchanter_enchant.py  test_enchanter_lucky_ratio.py  test_enchanter_prob.py  util.py
tests/council/: conftest.py  test_target_selector.py
tests/council/logic/: conftest.py  test_modify_effect.py  test_modify_lock.py  test_modify_reroll.py  test_modify_turn.py  test_mutate.py  test_mutate_prob.py  test_shuffle.py  util.py
tests/data/: test_operation_loader.py  test_pool.py  test_repository.py  test_selector_loader.py
tests/data/council/: test_council_validation.py  test_target_selector.py  util.py
tests/data/council/logic/: test_modify_effect.py  test_modify_enchant.py  test_modify_lock.py  test_modify_reroll.py  test_modify_turn.py  test_mutate.py  test_no_op.py  test_operation_validation.py  test_redistribute.py  test_shift.py  test_shuffle.py  test_swap.py  util.py
tests/envs/: test_env.py  test_env_dict.py
