[tool.poe.tasks]
black-check = "black --check pylixir tests"
isort-check = "isort --check-only pylixir tests"

black = "black pylixir tests"
isort = "isort pylixir tests"

format = ["black", "isort"]
lint = "pylint pylixir tests"
coverage = "pytest --cov=pylixir"
unittest = "pytest -vv -x tests/ --ignore tests/fetch/"
typetest = "mypy pylixir tests"

cln = "rm -rf **/__pycache__ .coverage .mypy_cache .pytest_cache"

test = ["coverage", "typetest", "lint", "black-check", "isort-check"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "-vv -x"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"
multi_line_output = 3
skip = "third_party"

[tool.poetry]
name = "pylixir"
version = "0.1.0"
description = "Elixir simulation library with python"
authors = ["meson3241 <meson3241@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/oleneyl/pylixir"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
loguru = "^0.5.3"
poethepoet = "^0.10.0"
PyYAML = "^6.0"
types-PyYAML = "^6.0.4"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
dependency-injector = "^4.40.0"
fire = "^0.5.0"
ipykernel = "^6.23.2"
ipywidgets = "^8.0.6"
matplotlib = "^3.7.1"
tensorboard = "^2.13.0"
tqdm = "^4.65.0"
gymnasium = "^0.28.1"
stable-baselines3 = "^2.0.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
isort = "^5.9.3"
coverage = "^6.0.2"
pylint = "=2.13.1"
black = "^22.6"
pytest-cov = "^3.0.0"
build = "^0.8.0"
twine = "^4.0.1"
types-requests = "^2.28.3"
mypy = "1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
